[gd_scene load_steps=8 format=3 uid="uid://hmomiakc0dpu"]

[ext_resource type="Texture2D" uid="uid://clnk1s48rehjr" path="res://assets/kenney_fantasy-ui-borders/Vector/fantasy-ui-borders.svg" id="1_y216y"]
[ext_resource type="Theme" uid="uid://d1stc5w463lhk" path="res://themes/battle_ui_theme.tres" id="2_bu4ei"]
[ext_resource type="Script" uid="uid://bwolseagofiu1" path="res://scripts/ui/digital_bank/bot_description_view.gd" id="2_p6r3t"]
[ext_resource type="Texture2D" uid="uid://d3y77q7dp5iia" path="res://assets/AttrAndElementsIcons_v1/Icons/Sprites/AllIcons16x16Outline.png" id="3_lkxh0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f4bc6"]
atlas = ExtResource("1_y216y")
region = Rect2(612, 164, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_buvd0"]
atlas = ExtResource("3_lkxh0")
region = Rect2(66, 17, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy7s5"]
atlas = ExtResource("3_lkxh0")
region = Rect2(34, 2, 12, 12)
filter_clip = true

[node name="BotInfo" type="NinePatchRect"]
offset_left = 29.0
offset_top = 11.0
offset_right = 410.0
offset_bottom = 126.0
texture = SubResource("AtlasTexture_f4bc6")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("2_p6r3t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -33.0
offset_right = 170.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bu4ei")
theme_override_font_sizes/font_size = 20
text = "hairy nocturnal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bu4ei")
theme_override_font_sizes/font_size = 20
text = "lv. 99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 16

[node name="TypeLabel" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bu4ei")
theme_override_font_sizes/font_size = 20
text = "Android"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = SubResource("AtlasTexture_buvd0")
expand_mode = 3
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 16

[node name="EnergyLabel" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_bu4ei")
theme_override_font_sizes/font_size = 20
text = "earth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = SubResource("AtlasTexture_xy7s5")
expand_mode = 3
stretch_mode = 5
